<resources>
    <string name="app_name">EatAndGo</string>
    <string name="titreId">titre</string>
    <string name="detailId">description</string>
    <string name="scan_play_ble">Lancer le scan</string>
    <string name="scan_pause_ble">Scan en cours</string>

    <string name="ble_device_status">Status : %1$s</string>
    <string name="ble_device_status_connecting">connecting</string>
    <string name="ble_device_status_connected">connected</string>
    <string name="ble_device_status_disconnected">deconnected</string>
    <string name="ble_device_status_disconnecting">deconnecting</string>
    <string name="lancer_le_scan">Lancer le scan</string>
    <string name="textview">TextView</string>
    <string name="add">add</string>
    <string name="caract_ristique">Caractéristique</string>
    <string name="uuid">uuid</string>
    <string name="propri_t_s">Propriétés</string>
    <string name="valeur">valeur</string>
    <string name="lecture">lecture</string>
    <string name="notifier">Notifier</string>
    <string name="ecriture">Ecriture</string>
    <string name="device">device</string>
    <string name="detail">detail</string>
    <string name="noname">noName</string>
    <string name="name">Name</string>
    <string name="todo">TODO</string>
    <string name="en_cours_de_connexion">En cours de connexion</string>
    <string name="entr_e">Entrée</string>
    <string name="dessert">Dessert</string>
    <string name="ble">BLE</string>
    <string name="plat">Plat</string>
    <string name="_0">0</string>
</resources>